fix: hide scrollbars 🐛

--- a/src/App.scss
+++ b/src/App.scss
@@ -42,3 +42,7 @@
   position: absolute;
   right: 0;
 }
+
+body {
+  overflow: hidden;
+}
